crates/core-executor/src/tests/sql/commands/snapshots/like_any/query_like_any_one_wrong.snap
---
source: crates/core-executor/src/tests/sql/commands/like_any.rs
description: "\"SELECT * FROM VALUES\n                ('John  Dddoe'),\n                ('Joe   Doe'),\n                ('John_down'),\n                ('Joe down'),\n                ('Tom   Doe'),\n                ('Tim down'),\n                (NULL)\n            WHERE column1 LIKE ANY ('%YES%')\n            ORDER BY column1\""
---
Ok(
    [
        "++",
        "++",
    ],
)
